[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Matias Pormi <mpormi@frba.utn.edu.ar>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.12.1"
expand = "0.3.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
time = "=0.3.36"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "=1.11.0", features = ["v4"] }
chrono = "=0.4.34"
getrandom = "=0.2.14"
rand = "=0.8.5"
home = "=0.5.9"
base64ct = "=1.6.0"
zerocopy = "=0.7.35"
thiserror = "=1.0.64"
ahash = "=0.8.11"
indexmap = "=2.2.6"
hashbrown = "=0.14.5"
watch = "0.2.3"
config = "0.14"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
